# airq

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
airq-core/: Cargo.toml
airq-core/src/: event.rs  lib.rs  matrix.rs  merge.rs
airq-dashboard/: Cargo.toml  Dioxus.toml
airq-dashboard/src/: app.rs  main.rs  state.rs
docs/plan/airq-serve_20260316/: plan.md  spec.md
docs/plan/signal-matrix_20260316/: plan.md  spec.md
examples/: detect_events.rs  hamburg-report.html  moscow-report.html
skills/airq/: SKILL.md
src/: api.rs  collector.rs  db.rs  detector.rs  lib.rs  main.rs  push.rs  serve.rs  weather.rs  web.rs
