[workspace]
members = [".", "airq-core"]

[package]
name = "airq"
version = "1.2.0"
edition = "2024"
description = "CLI air quality checker with comfort index, pollution fronts, source attribution, and PDF reports"
license = "MIT"
repository = "https://github.com/fortunto2/airq"
keywords = ["air-quality", "cli", "open-meteo", "sensor-community"]
categories = ["command-line-utilities"]

[dependencies]
airq-core = { path = "airq-core" }
anyhow = "1.0.102"
clap = { version = "4.6.0", features = ["derive"] }
colored = "3.1.1"
clap_complete = "4.6.0"
dirs = "6.0.0"
futures = "0.3.32"
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["full"] }
toml = "1.0.6"
