[package]
name = "airq-core"
version = "1.3.0"
edition = "2024"
description = "Air quality core: AQI, 14-signal comfort (sigmoid), event detection (EWMA+concordance), source classification, time-series matrix, sensor/model merge"
license = "MIT"
repository = "https://github.com/fortunto2/airq"
keywords = ["air-quality", "aqi", "comfort-index", "pollution", "sensor-community"]
categories = ["science", "algorithms"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["cli"]
cli = ["colored", "dirs", "toml"]
wasm = ["wasm-bindgen"]
storage = ["bincode"]

[dependencies]
anyhow = "1.0.102"
cities = "0.2.0"
colored = { version = "3.1.1", optional = true }
dirs = { version = "6.0.0", optional = true }
petgraph = "0.8.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
toml = { version = "1.0.6", optional = true }
wasm-bindgen = { version = "0.2", optional = true }
bincode = { version = "2", features = ["serde"], optional = true }

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
